--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap-icons": "^1.10.3",
@@ -17,6 +18,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
