--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/numeral": "^2.0.5",
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
